
/*
  Copyright (c) 2025

  Description:
    Internal interaction contract

  Owner: 
    dev team
    
  Methods:
    - AddPayment ( Добавление новых платежных данных )
    - UpdatePayment ( Обновление платежной информации )
    - GetPayment ( Получение платежной информации по идентификатору )
    - GetAllPayments ( Получение всех платежных данных )
*/

syntax = "proto3";
package api.tips.payment.v1;
option csharp_namespace = "ApiTips.Api.Payment.V1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import 'custom_enums/v1/custom_enums.proto';
import 'custom_types/v1/decimal.proto';
import 'general_entities/v1/general_entities.proto';

service ApiTipsPaymentService {

  /*
   * Добавление новых платежных данных
   */
  rpc AddPayment (AddPaymentRequest) returns (AddPaymentResponse){
    option idempotency_level = IDEMPOTENT;
  };

  /*
   * Обновление платежной информации
   */
  rpc UpdatePayment (UpdatePaymentRequest) returns (UpdatePaymentResponse){
    option idempotency_level = IDEMPOTENT;
  };

  /*
   * Получение платежной информации по идентификатору
   */
  rpc GetPayment (GetPaymentRequest) returns (GetPaymentResponse);

  /*
   * Получение всех платежных данных
   */
  rpc GetAllPayments (GetAllPaymentsRequest) returns (GetAllPaymentsResponse);
}

message AddPaymentRequest{
  Payment payment = 1;
}

message AddPaymentResponse {

  /*
   * Платежная информация для добавления
   */
  Payment payment = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 2;
}

message UpdatePaymentRequest {
  /*
   * Платежная информация для обновления
   */
  Payment payment = 2;
}

message UpdatePaymentResponse {

  /*
   * Обновлённая платёжная информация
   */
  Payment payment = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 2;
}

message GetPaymentRequest {

  /*
   * Идентификатор платежной информации
   */
  google.protobuf.Int64Value id = 1;
}

message GetPaymentResponse {

  /*
   * Платёжная информация
   */
  Payment payment = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 2;
}

message GetAllPaymentsRequest {
}

message GetAllPaymentsResponse {

  /*
   * Список всех платёжных данных
   */
  repeated Payment payments = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 2;
}

message Payment {

  /*
   * Идентификатор платёжной информации
   */
  google.protobuf.Int64Value id = 1;

  google.protobuf.BoolValue is_banned = 2;

  oneof PaymentType
  {
    /*
     * Данные по банковскому счёту
     */
    BankAccount bank_account = 50;

    /*
     * Данные по крипто-кошельку
     */
    CryptoWallet crypto_wallet = 4;
  }
}

message BankAccount {
  /*
   * Наименование банка
   */
  google.protobuf.StringValue bank_name = 1;
  /*
   * Адрес банка
   */
  google.protobuf.StringValue bank_address = 2;
  /*
   * Swift номер
   */
  google.protobuf.StringValue swift = 3;
  /*
   * Номер аккаунта
   */
  google.protobuf.StringValue account_number = 4;
  /*
   * Iban номер
   */
  google.protobuf.StringValue iban = 5;
  /*
   * Дополнительная информация
   */
  google.protobuf.StringValue additional_info = 6;

  /*
   * Тип валюты
   */
  custom_enums.v1.CurrencyType currency_type = 7;

}

message CryptoWallet {

  /*
   * Номер расчётного счета
   */
  google.protobuf.StringValue address = 1;
  /*
   * Справочник крипто-валюты
   */
  google.protobuf.StringValue wallet = 2;
  /*
   * Токен для крипто-кошелька
   */
  google.protobuf.StringValue token = 3;
  /*
   * Тип крипто-валюты
   */
  custom_enums.v1.CryptoCurrency crypto_currency_type = 4;


}
